<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.steaklocker.steaklocker.SettingsActivity">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/editNamePrompt"
        android:padding="5dp"
        android:imeOptions="actionNext"
        android:singleLine="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/editEmailPrompt"
        android:padding="5dp"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/editPassPrompt"
        android:padding="5dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Settings"
        android:id="@+id/buttonProfileSave"
        android:layout_gravity="center_horizontal"
        android:background="#ffff7200"
        android:textColor="#ffffffff"
        android:layout_marginTop="50dp" />
</LinearLayout>
